# devops-test

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: check-and-lint.yml  ci-devops-test.yml  ci.yml  release-packaging.yml  rust.yml  test.yml
lib1/: Cargo.toml
lib2/: Cargo.toml
lib3/: Cargo.toml
