[package]
name = "lib3"
version = "0.1.1"
edition = "2021"
description = "Lib3 Package"
license = "MIT OR Apache-2.0"
homepage = "https://serde.rs/"
documentation = "https://docs.rs/bitflags"
repository = "https://github.com/rust-lang/cargo/"
# readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
