[package]
name = "lib3"
version = "0.1.2"
edition = "2021"
description = "Lib3 Package"
authors = ["Manojkumar Jeganathan <jmk4791@gmail.com>"]
documentation = "https://docs.rs/hpke-rs-evercrypt"
license = "MPL-2.0"
repository = "https://github.com/jmk47912204/devops-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
